tests/ui/form_data_enum.stderr
error: #[derive(FormData)] can only be used on structs
 --> $DIR/form_data_enum.rs:4:10
  |
4 | #[derive(FormData, Validate)]
  |          ^^^^^^^^
  |
  = note: this error originates in the derive macro `FormData` (in Nightly builds, run with -Z macro-backtrace for more info)

error: #[derive(Validate)] can only be used with structs
 --> $DIR/form_data_enum.rs:5:1
  |
5 | enum MyFormData {}
  | ^^^^
